<resources>
    <string name="app_name">Арабский в твоих руках. Том 1</string>
    <string name="title_activity_chapter">Главы</string>
    <string name="navigation_drawer_open">Открыть навигационный ящик</string>
    <string name="navigation_drawer_close">Закрыть навигационный ящик</string>
    <string name="nav_header_title">Арабский в твоих руках.\nТом 1</string>
    <string name="action_settings">Настройки</string>
    <string name="action_exit">Настройки</string>
    <string name="action_exercises">Упражнения</string>
    <string name="title_menu_chapters">Главы</string>
    <string name="title_menu_settings">Настройки</string>
    <string name="title_menu_extra">Дополнительно</string>
    <string name="title_menu_list_apps">Список приложений</string>
    <string name="title_menu_about_us">О нас</string>
    <string name="title_menu_about_app">О приложении</string>
    <string name="title_menu_rate">Оценить</string>
    <string name="title_menu_share">Поделиться</string>
    <string name="drop_table_if_exists">DROP TABLE IF EXISTS</string>
    <string name="dialogs">Диалоги</string>
    <string name="make_on_offer">Составьте предложение как в примере.</string>
    <string name="list_apps">Список наших приложений</string>
    <string name="greeting_ar">السَّلامُ عَلَيْكُم!</string>
    <string name="greeting_ru">Мир вам!</string>
    <string name="positive_ok">Ок</string>
    <string name="positive_ok_instruction">Я ознакомился</string>
    <string name="negative_ok_instruction">Больше не показывать</string>
    <string name="about_us_text">

        <b>JMApps</b> — серия бесплатных андроид-приложений для мусульман.
        Наши приложения всегда будут <b>бесплатными</b> и <b>без</b> какой-либо <b>рекламы</b>.\n \n
        Вы можете следить за обновлением старых и изданием новых приложений в нашей группе в ВКонтакте:\n
        www.vk.com/JMApps и на нашем канале в Telegram:\n t.me/JMApps. \n\n
        Если же у вас возникнут вопросы, или появятся предложения или критика, можете написать нам
        на почту: jmappsmuslim@gmail.com, или в Telegram: t.me/Jambik

    </string>
    <string name="text_instruction">

        Если вы нажмете кнопку <b>Play</b>, <b>воспроизведутся все</b> предложения
        от первого до последнего. Если вы кликнете на один пункт, <b>вопроизведется только он один</b>.
        Если же вы нажмете на какой-нибудь пункт и <b>удержите</b> несколько секунд, то содержимое
        пункта <b>будет скопированно</b>.

    </string>
    <string name="text_instruction_exercises">

        Для самопроверки кликните на стрелку.\n
        Чтобы воспроизвести предложение, кликните на него.\n
        Чтобы скопировать содержимое предложения, нажмите на него и удерживайте несколько секунд.

    </string>
</resources>
